🌐 style: fix i18n of model list fetcher

--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "احصل على قائمة النماذج",
+      "fetching": "جاري الحصول على قائمة النماذج...",
+      "latestTime": "آخر تحديث: {{time}}",
+      "noLatestTime": "لم يتم الحصول على قائمة بعد"
+    },
     "modelList": {
       "desc": "اختيار النموذج الذي سيتم عرضه في الجلسة، سيتم عرض النموذج المحدد في قائمة النماذج",
       "placeholder": "الرجاء اختيار نموذج من القائمة",
-      "title": "قائمة النماذج"
+      "title": "قائمة النماذج",
+      "total": "متاح {{count}} نموذج"
     },
     "waitingForMore": "يتم <1>التخطيط لتوفير</1> المزيد من النماذج، ترقبوا المزيد ✨"
   },
