--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "Изтегляне на списъка с модели",
+      "fetching": "Изтегляне на списъка с модели...",
+      "latestTime": "Последно актуализирано: {{time}}",
+      "noLatestTime": "В момента няма наличен списък"
+    },
     "modelList": {
       "desc": "Изберете модел, който да се показва по време на разговор. Избраният модел ще бъде показан в списъка с модели.",
       "placeholder": "Моля, изберете модел от списъка",
-      "title": "Списък с модели"
+      "title": "Списък с модели",
+      "total": "Общо {{count}} налични модела"
     },
     "waitingForMore": "Още модели са <1>планирани да бъдат добавени</1>, очаквайте ✨"
   },
