--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "Obtener lista de modelos",
+      "fetching": "Obteniendo lista de modelos...",
+      "latestTime": "Última actualización: {{time}}",
+      "noLatestTime": "Lista no disponible actualmente"
+    },
     "modelList": {
       "desc": "Selecciona los modelos que se mostrarán en la conversación. Los modelos seleccionados se mostrarán en la lista de modelos.",
       "placeholder": "Selecciona un modelo de la lista",
-      "title": "Lista de modelos"
+      "title": "Lista de modelos",
+      "total": "Total de {{count}} modelos disponibles"
     },
     "waitingForMore": "Más modelos están en <1>planificación para su incorporación</1>, ¡estén atentos! ✨"
   },
