--- a/locales/ja-JP/setting.json
+++ b/locales/ja-JP/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "モデルリストを取得する",
+      "fetching": "モデルリストを取得中...",
+      "latestTime": "最終更新時間：{{time}}",
+      "noLatestTime": "リストを取得していません"
+    },
     "modelList": {
       "desc": "セッションで表示するモデルを選択します。選択したモデルはモデルリストに表示されます",
       "placeholder": "モデルをリストから選択してください",
-      "title": "モデルリスト"
+      "title": "モデルリスト",
+      "total": "合計 {{count}} 個のモデルが利用可能です"
     },
     "waitingForMore": "さらに多くのモデルが <1>計画されています</1>。お楽しみに ✨"
   },
