--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "Получить список моделей",
+      "fetching": "Идет получение списка моделей...",
+      "latestTime": "Последнее обновление: {{time}}",
+      "noLatestTime": "Список пока не получен"
+    },
     "modelList": {
       "desc": "Выберите модель для отображения в сеансе, выбранная модель будет отображаться в списке моделей",
       "placeholder": "Выберите модель из списка",
-      "title": "Список моделей"
+      "title": "Список моделей",
+      "total": "Всего доступно {{count}} моделей"
     },
     "waitingForMore": "Больше моделей доступно в <1>плане подключения</1>, ожидайте ✨"
   },
