--- a/locales/pt-BR/setting.json
+++ b/locales/pt-BR/setting.json
@@ -75,10 +75,17 @@
         }
       }
     },
+    "fetcher": {
+      "fetch": "Obter lista de modelos",
+      "fetching": "Obtendo lista de modelos...",
+      "latestTime": "Última atualização: {{time}}",
+      "noLatestTime": "Lista não disponível"
+    },
     "modelList": {
       "desc": "Escolha os modelos a serem exibidos na conversa. Os modelos selecionados serão exibidos na lista de modelos.",
       "placeholder": "Selecione um modelo da lista",
-      "title": "Lista de Modelos"
+      "title": "Lista de Modelos",
+      "total": "Total de {{count}} modelos disponíveis"
     },
     "waitingForMore": "Mais modelos estão sendo <1>planejados para serem adicionados</1>, aguarde ansiosamente ✨"
   },
