📝 docs: update docs

--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -18,7 +18,7 @@ When deploying LobeChat, a rich set of environment variables related to model se
 ### `OPENAI_API_KEY`
 
 - Type: Required
-- Description: This is the API key you applied for on the OpenAI account page, you can check it out [here](openai-api-page)
+- Description: This is the API key you applied for on the OpenAI account page, you can check it out [here](https://platform.openai.com/api-keys)
 - Default: -
 - Example: `sk-xxxxxx...xxxxxx`
 
@@ -61,7 +61,7 @@ You can find all current model names in [modelProviders](https://github.com/lobe
 
 ## Azure OpenAI
 
-If you need to use Azure OpenAI to provide model services, you can refer to the [Deploying with Azure OpenAI](../Deployment/Deploy-with-Azure-OpenAI.en-US.md) section for detailed steps. Here, we will list the environment variables related to Azure OpenAI.
+If you need to use Azure OpenAI to provide model services, you can refer to the [Deploying with Azure OpenAI](/docs/self-hosting/examples/azure-openai) section for detailed steps. Here, we will list the environment variables related to Azure OpenAI.
 
 ### `AZURE_API_KEY`
 
