--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -4,7 +4,7 @@
   },
   "analytics": {
     "telemetry": {
-      "desc": "通过选择发送遥测数据，你可以帮助我们改善 LobeChat 整体用户体验",
+      "desc": "通过选择发送遥测数据，你可以帮助我们改善 EDUGPT 整体用户体验",
       "title": "发送匿名使用数据"
     },
     "title": "数据统计"
@@ -53,11 +53,11 @@
           "title": "模型展示名称"
         },
         "files": {
-          "extra": "当前 LobeChat 的文件上传实现仅为一种 Hack 方案，仅限自行尝试。完整文件上传能力请等待后续实现",
+          "extra": "当前 EDUGPT 的文件上传实现仅为一种 Hack 方案，仅限自行尝试。完整文件上传能力请等待后续实现",
           "title": "支持文件上传"
         },
         "functionCall": {
-          "extra": "此配置将仅开启 LobeChat 中的函数调用能力，是否支持函数调用完全取决于模型本身，请自行测试该模型的函数调用能力可用性",
+          "extra": "此配置将仅开启 EDUGPT 中的函数调用能力，是否支持函数调用完全取决于模型本身，请自行测试该模型的函数调用能力可用性",
           "title": "支持函数调用"
         },
         "id": {
@@ -70,7 +70,7 @@
           "title": "最大 token 数"
         },
         "vision": {
-          "extra": "此配置将仅开启 LobeChat 中的图片上传配置，是否支持识别完全取决于模型本身，请自行测试该模型的视觉识别能力可用性",
+          "extra": "此配置将仅开启 EDUGPT 中的图片上传配置，是否支持识别完全取决于模型本身，请自行测试该模型的视觉识别能力可用性",
           "title": "支持视觉识别"
         }
       }
