--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -1,7 +1,7 @@
 {
   "about": "About",
   "advanceSettings": "Advanced Settings",
-  "appInitializing": "LobeChat is initializing, please wait...",
+  "appInitializing": "EDUGPT is initializing, please wait...",
   "autoGenerate": "Auto Generate",
   "autoGenerateTooltip": "Auto-generate agent description based on prompts",
   "cancel": "Cancel",
