--- a/locales/en-US/welcome.json
+++ b/locales/en-US/welcome.json
@@ -7,8 +7,8 @@
   "pickAgent": "Or choose from the following agent templates",
   "skip": "Skip Creation",
   "slogan": {
-    "desc1": "Pioneering the new age of thinking and creating. Built for you, the Super Individual.",
-    "desc2": "Create your first agent and let's get started~",
-    "title": "Unlock the superpower of your brain"
+    "desc1": "Step into the Path of Wisdom, light up your learning journey, and guide you to explore the vast world of knowledge.",
+    "desc2": "Create your first assistant, let's get started~",
+    "title": "Leading the Way in Educational Innovation"
   }
 }
