--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -75,6 +75,10 @@
         }
       }
     },
+    "fetchOnClient": {
+      "desc": "从浏览器直接发起会话请求",
+      "title": "客户端请求"
+    },
     "fetcher": {
       "fetch": "获取模型列表",
       "fetching": "正在获取模型列表...",
