📝 docs: Complete guide of ollama local deployment

--- a/docs/self-hosting/examples/ollama.mdx
+++ b/docs/self-hosting/examples/ollama.mdx
@@ -75,6 +75,11 @@ If Ollama is run as a macOS application, environment variables should be set usi
 If Ollama is run as a systemd service, environment variables should be set using `systemctl`:
 
 1. Edit the systemd service by calling `sudo systemctl edit ollama.service`.
+
+    ```bash
+    sudo systemctl edit ollama.service
+    ```
+
 2. For each environment variable, add a line `Environment` under section `[Service]`:
 
     ```bash
