--- a/docs/self-hosting/examples/ollama.zh-CN.mdx
+++ b/docs/self-hosting/examples/ollama.zh-CN.mdx
@@ -50,14 +50,14 @@ docker run -d -p 3210:3210 -e OLLAMA_PROXY_URL=http://host.docker.internal:11434
 
 1. 首先通过 Windows 任务栏点击 Ollama 退出程序。
 2. 从控制面板编辑系统环境变量。
-3. 为您的用户账户编辑或新建 Ollama 的环境变量，比如`OLLAMA_HOST`、`OLLAMA_MODELS`等。
+3. 为您的用户账户编辑或新建 Ollama 的环境变量，比如`OLLAMA_HOST`、`OLLAMA_ORIGINS`等。
 4. 点击`OK/应用`保存。
 5. 重新运行`Ollama`。
 
 
 ### 在 Mac 上设置环境变量
 
-如果 Ollama 作为 macOS 应用程序运行，应该使用 `launchctl` 设置环境变量：
+如果 Ollama 作为 macOS 应用程序运行，你需要使用 `launchctl` 设置环境变量：
 
 1. 对于每个环境变量，调用 `launchctl setenv`。
 
@@ -73,7 +73,12 @@ docker run -d -p 3210:3210 -e OLLAMA_PROXY_URL=http://host.docker.internal:11434
 
 如果 Ollama 作为 systemd 服务运行，应该使用`systemctl`设置环境变量：
 
-1. 通过调用`sudo systemctl edit ollama.service`编辑 systemd 服务。这将打开一个编辑器。
+1. 通过调用`sudo systemctl edit ollama.service`编辑 systemd 服务。
+
+    ```bash
+    sudo systemctl edit ollama.service
+    ```
+
 2. 对于每个环境变量，在`[Service]`部分下添加`Environment`：
 
     ```bash
