--- a/docs/usage/features/pwa.mdx
+++ b/docs/usage/features/pwa.mdx
@@ -27,7 +27,9 @@ If you are unfamiliar with the installation process of PWA, you can follow the s
 
 ## Running on Chrome / Edge
 
-On macOS, when using a Chrome-installed PWA, it is required that Chrome be open, otherwise Chrome will automatically open and then launch the PWA app.
+<Callout type={'important'}>
+  On macOS, when using a Chrome-installed PWA, it is required that Chrome be open, otherwise Chrome will automatically open and then launch the PWA app.
+</Callout>
 
 <Steps>
 
@@ -59,4 +61,13 @@ Safari PWA requires macOS Ventura or later. The PWA installed by Safari does not
 
 </Steps>
 
-The default installed LobeChat PWA icon has a black background, you can use <kbd>cmd</kbd> + <kbd>i</kbd> to paste the following image to replace it with a white background.
+<Callout type={'tip'}>
+  The default installed LobeChat PWA icon has a black background, you can use <kbd>cmd</kbd> + <kbd>i</kbd> to paste the following image to replace it with a white background.
+</Callout>
+
+<Image
+  alt={'PWA White Icon'}
+  borderless
+  cover
+  src={'https://github.com/lobehub/lobe-chat/assets/36695271/16ce82cb-49be-4d4d-ac86-4403a1536917'}
+/>
