--- a/docs/usage/features/pwa.zh-CN.mdx
+++ b/docs/usage/features/pwa.zh-CN.mdx
@@ -27,7 +27,9 @@ tags:
 
 ## Chrome / Edge 浏览器上运行
 
-macOS 下，使用 Chrome 安装的 PWA 时，必须要求 Chrome 是打开状态，否则会自动打开 Chrome 再打开 PWA 应用。
+<Callout type={'important'}>
+  macOS 下，使用 Chrome 安装的 PWA 时，必须要求 Chrome 是打开状态，否则会自动打开 Chrome 再打开 PWA 应用。
+</Callout>
 
 <Steps>
 
@@ -59,4 +61,13 @@ Safari PWA 需要 macOS Ventura 或更高版本。Safari 安装的 PWA 并不要
 
 </Steps>
 
-默认安装的 LobeChat PWA 图标是黑色背景的，您可以在自行使用 <kbd>cmd</kbd> + <kbd>i</kbd> 粘贴如下图片替换为白色背景的。
+<Callout type={'tip'}>
+  默认安装的 LobeChat PWA 图标是黑色背景的，您可以在自行使用 <kbd>cmd</kbd> + <kbd>i</kbd> 粘贴如下图片替换为白色背景的。
+</Callout>
+
+<Image
+  alt={'PWA White Icon'}
+  borderless
+  cover
+  src={'https://github.com/lobehub/lobe-chat/assets/36695271/16ce82cb-49be-4d4d-ac86-4403a1536917'}
+/>
