📝 docs: remove v1 suffix

--- a/locales/ar/modelProvider.json
+++ b/locales/ar/modelProvider.json
@@ -130,7 +130,7 @@
     },
     "endpoint": {
       "desc": "أدخل عنوان واجهة برمجة التطبيقات الخاص بـ Ollama، إذا لم يتم تحديده محليًا، يمكن تركه فارغًا",
-      "placeholder": "http://127.0.0.1:11434/v1",
+      "placeholder": "http://127.0.0.1:11434",
       "title": "عنوان وكيل الواجهة"
     },
     "setup": {
