--- a/locales/ru-RU/modelProvider.json
+++ b/locales/ru-RU/modelProvider.json
@@ -130,7 +130,7 @@
     },
     "endpoint": {
       "desc": "Введите адрес прокси-интерфейса Ollama, если локально не указано иное, можете оставить пустым",
-      "placeholder": "http://127.0.0.1:11434/v1",
+      "placeholder": "http://127.0.0.1:11434",
       "title": "Адрес прокси-интерфейса"
     },
     "setup": {
