--- a/locales/nl-NL/modelProvider.json
+++ b/locales/nl-NL/modelProvider.json
@@ -130,7 +130,7 @@
     },
     "endpoint": {
       "desc": "Voer het Ollama interface proxyadres in, laat leeg indien niet specifiek aangegeven",
-      "placeholder": "http://127.0.0.1:11434/v1",
+      "placeholder": "http://127.0.0.1:11434",
       "title": "Interface Proxyadres"
     },
     "setup": {
