--- a/docs/self-hosting/advanced/sso-providers/github.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/github.zh-CN.mdx
@@ -16,7 +16,7 @@ tags:
 <Steps>
   ### 创建 Github 提供应用
 
-点击[这里][github-create-app]创建一个新的Github App。
+点击[这里](https://github.com/settings/apps/new) 创建一个新的 Github App。
 
 填写Github App name、Homepage URL、Callbak URL
 
