--- a/docs/self-hosting/platform/docker-compose.zh-CN.mdx
+++ b/docs/self-hosting/platform/docker-compose.zh-CN.mdx
@@ -13,15 +13,15 @@ tags:
 
 <div style={{display:"flex", gap: 4}}>
 
-[![][docker-release-shield]][docker-release-link]
+[![](https://img.shields.io/docker/v/lobehub/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square)](https://hub.docker.com/r/lobehub/lobe-chat)
 
-[![][docker-size-shield]][docker-size-link]
+[![](https://img.shields.io/docker/image-size/lobehub/lobe-chat?color=369eff&labelColor=black&style=flat-square)](https://hub.docker.com/r/lobehub/lobe-chat)
 
-[![][docker-pulls-shield]][docker-pulls-link]
+[![](https://img.shields.io/docker/pulls/lobehub/lobe-chat?color=45cc11&labelColor=black&style=flat-square)](https://hub.docker.com/r/lobehub/lobe-chat)
 
 </div>
 
-我们提供了 ，供你在自己的私有设备上部署 LobeChat 服务。
+我们提供了 [Docker 镜像](https://hub.docker.com/r/lobehub/lobe-chat) ，供你在自己的私有设备上部署 LobeChat 服务。
 
 <Steps>
 
