--- a/docs/usage/providers/ollama.mdx
+++ b/docs/usage/providers/ollama.mdx
@@ -1,43 +1,61 @@
 ---
 title: Using Ollama in LobeChat
-description: 了解如何在 LobeChat 中使用 Ollama 框架，以增强您的应用程序。
+description: >-
+  Learn how to use Ollama in LobeChat, run LLM locally, and experience
+  cutting-edge AI usage.
 tags:
   - Ollama
   - LobeChat
-  - 本地大语言模型
+  - Local LLM
   - Ollama WebUI
 ---
+
 # Using Ollama in LobeChat
 
-![Using Ollama in LobeChat](https://github.com/lobehub/lobe-chat/assets/28616219/a2a091b8-ac45-4679-b5e0-21d711e17fef)
+<Image
+  alt={'Using Ollama in LobeChat'}
+  borderless
+  cover
+  src={'https://github.com/lobehub/lobe-chat/assets/28616219/a2a091b8-ac45-4679-b5e0-21d711e17fef'}
+/>
 
-Ollama is a powerful framework for running large language models (LLMs) locally, supporting various language models such as Llama 2, Mistral, and more. Now, LobeChat supports integration with Ollama, meaning you can easily enhance your application by using the language models provided by Ollama in LobeChat.
+Ollama is a powerful framework for running large language models (LLMs) locally, supporting various language models including Llama 2, Mistral, and more. Now, LobeChat supports integration with Ollama, meaning you can easily enhance your application by using the language models provided by Ollama in LobeChat.
 
 This document will guide you on how to use Ollama in LobeChat:
+
+<Video
+  alt="demonstration of using Ollama in LobeChat"
+  height="524"
+  src="https://github.com/lobehub/lobe-chat/assets/28616219/c32b56db-c6a1-4876-9bc3-acbd37ec0c0c"
+/>
 
 ## Using Ollama on macOS
 
 <Steps>
 
-### Installing Ollama locally
+### Local Installation of Ollama
 
-```
-[Download Ollama for macOS](https://ollama.com/download?utm_source=lobehub&utm_medium=docs&utm_campaign=download-macos) and unzip, then install it.
-```
+[Download Ollama for macOS](https://ollama.com/download?utm_source=lobehub&utm_medium=docs&utm_campaign=download-macos) and unzip/install it.
 
-### Configuring Ollama for cross-origin access
+### Configure Ollama for Cross-Origin Access
 
-Due to Ollama's default configuration, it is set to only allow local access at startup. Additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access and port listening. Use `launchctl` to set the environment variable:
+Due to Ollama's default configuration, which restricts access to local only, additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access and port listening. Use `launchctl` to set the environment variable:
 
 ```bash
 launchctl setenv OLLAMA_ORIGINS "*"
 ```
 
-After completing the setup, you need to restart the Ollama application.
+After setting up, restart the Ollama application.
 
-### Conversing with the local large model in LobeChat
+### Conversing with Local Large Models in LobeChat
 
 Now, you can start conversing with the local LLM in LobeChat.
+
+<Image
+  alt="Chat with llama3 in LobeChat"
+  height="400"
+  src="https://github.com/lobehub/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
+/>
 
 </Steps>
 
@@ -45,25 +63,23 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 <Steps>
 
-### Installing Ollama locally
+### Local Installation of Ollama
 
-```
 [Download Ollama for Windows](https://ollama.com/download?utm_source=lobehub&utm_medium=docs&utm_campaign=download-windows) and install it.
-```
 
-### Configuring Ollama for cross-origin access
+### Configure Ollama for Cross-Origin Access
 
-Due to Ollama's default configuration, it is set to only allow local access at startup. Additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access and port listening.
+Since Ollama's default configuration allows local access only, additional environment variable setting `OLLAMA_ORIGINS` is needed for cross-origin access and port listening.
 
 On Windows, Ollama inherits your user and system environment variables.
 
 1. First, exit the Ollama program by clicking on it in the Windows taskbar.
-2. Edit system environment variables from the control panel.
-3. Edit or create the environment variable `OLLAMA_ORIGINS` for your user account, set the value to `*`.
+2. Edit system environment variables from the Control Panel.
+3. Edit or create the Ollama environment variable `OLLAMA_ORIGINS` for your user account, setting the value to `*`.
 4. Click `OK/Apply` to save and restart the system.
 5. Run `Ollama` again.
 
-### Conversing with the local large model in LobeChat
+### Conversing with Local Large Models in LobeChat
 
 Now, you can start conversing with the local LLM in LobeChat.
 
@@ -73,7 +89,7 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 <Steps>
 
-### Installing Ollama locally
+### Local Installation of Ollama
 
 Install using the following command:
 
@@ -83,9 +99,9 @@ curl -fsSL https://ollama.com/install.sh | sh
 
 Alternatively, you can refer to the [Linux manual installation guide](https://github.com/ollama/ollama/blob/main/docs/linux.md).
 
-### Configuring Ollama for cross-origin access
+### Configure Ollama for Cross-Origin Access
 
-Due to Ollama's default configuration, it is set to only allow local access at startup. Additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access. If Ollama runs as a systemd service, use `systemctl` to set the environment variable:
+Due to Ollama's default configuration, which allows local access only, additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access and port listening. If Ollama runs as a systemd service, use `systemctl` to set the environment variable:
 
 1. Edit the systemd service by calling `sudo systemctl edit ollama.service`:
 
@@ -93,7 +109,7 @@ Due to Ollama's default configuration, it is set to only allow local access at s
 sudo systemctl edit ollama.service
 ```
 
-2. Add `Environment` for each environment variable under `[Service]`:
+2. Add `Environment` under `[Service]` for each environment variable:
 
 ```bash
 [Service]
@@ -109,7 +125,7 @@ sudo systemctl daemon-reload
 sudo systemctl restart ollama
 ```
 
-### Conversing with the local large model in LobeChat
+### Conversing with Local Large Models in LobeChat
 
 Now, you can start conversing with the local LLM in LobeChat.
 
@@ -119,17 +135,17 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 <Steps>
 
-### Pulling the Ollama image
+### Pulling Ollama Image
 
-If you prefer using Docker, Ollama also provides an official Docker image. You can pull it using the following command:
+If you prefer using Docker, Ollama provides an official Docker image that you can pull using the following command:
 
 ```bash
 docker pull ollama/ollama
 ```
 
-### Configuring Ollama for cross-origin access
+### Configure Ollama for Cross-Origin Access
 
-Due to Ollama's default configuration, it is set to only allow local access at startup. Additional environment variable setting `OLLAMA_ORIGINS` is required for cross-origin access.
+Since Ollama's default configuration allows local access only, additional environment variable setting `OLLAMA_ORIGINS` is needed for cross-origin access and port listening.
 
 If Ollama runs as a Docker container, you can add the environment variable to the `docker run` command.
 
@@ -137,7 +153,7 @@ If Ollama runs as a Docker container, you can add the environment variable to th
 docker run -d --gpus=all -v ollama:/root/.ollama -e OLLAMA_ORIGINS="*" -p 11434:11434 --name ollama ollama/ollama
 ```
 
-### Conversing with the local large model in LobeChat
+### Conversing with Local Large Models in LobeChat
 
 Now, you can start conversing with the local LLM in LobeChat.
 
@@ -145,17 +161,21 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 ## Installing Ollama Models
 
-Ollama supports various models, and you can check the available model list in the [Ollama Library](https://ollama.com/library) and choose the appropriate model based on your needs.
+Ollama supports various models, which you can view in the [Ollama Library](https://ollama.com/library) and choose the appropriate model based on your needs.
 
-### Installing in LobeChat
+### Installation in LobeChat
 
-In LobeChat, we have enabled some common large language models by default, such as llama3, Gemma, Mistral, etc. When you select a model for conversation, we will prompt you to download the model.
+In LobeChat, we have enabled some common large language models by default, such as llama3, Gemma, Mistral, etc. When you select a model for conversation, we will prompt you to download that model.
 
-![LobeChat prompts to install Ollama model](https://github.com/lobehub/lobe-chat/assets/28616219/4e81decc-776c-43b8-9a54-dfb43e9f601a)
+<Image
+  alt="LobeChat guide your to install Ollama model"
+  height="460"
+  src="https://github.com/lobehub/lobe-chat/assets/28616219/4e81decc-776c-43b8-9a54-dfb43e9f601a"
+/>
 
-Once downloaded, you can start the conversation.
+Once downloaded, you can start conversing.
 
-### Pulling models to local using Ollama
+### Pulling Models to Local with Ollama
 
 Alternatively, you can install models by executing the following command in the terminal, using llama3 as an example:
 
@@ -163,15 +183,22 @@ Alternatively, you can install models by executing the following command in the 
 ollama pull llama3
 ```
 
-![Video](https://github.com/lobehub/lobe-chat/assets/28616219/95828c11-0ae5-4dfa-84ed-854124e927a6)
-
-<Callout type={'info'}>
-You can visit [Integrating with Ollama](/docs/self-hosting/examples/ollama) to learn how to deploy LobeChat to meet integration needs with Ollama.
-</Callout>
+<Video
+  height="524"
+  src="https://github.com/lobehub/lobe-chat/assets/28616219/95828c11-0ae5-4dfa-84ed-854124e927a6"
+/>
 
 ## Custom Configuration
 
-You can find Ollama's configuration options in `Settings` -> `Language Model`, where you can configure Ollama's proxy, model names, etc.
+You can find Ollama's configuration options in `Settings` -> `Language Models`, where you can configure Ollama's proxy, model names, etc.
 
-![Ollama Service Provider Settings](https://github.com/lobehub/lobe-chat/assets/28616219/54b3696b-5b13-4761-8c1b-1e664867b2dd)
+<Image
+  alt={'Ollama Provider Settings'}
+  height={274}
+  src={'https://github.com/lobehub/lobe-chat/assets/28616219/54b3696b-5b13-4761-8c1b-1e664867b2dd'}
+/>
 
+<Callout type={'info'}>
+  Visit [Integrating with Ollama](/docs/self-hosting/examples/ollama) to learn how to deploy
+  LobeChat to meet integration needs with Ollama.
+</Callout>
