--- a/docs/usage/providers/ollama.zh-CN.mdx
+++ b/docs/usage/providers/ollama.zh-CN.mdx
@@ -1,9 +1,6 @@
 ---
 title: 在 LobeChat 中使用 Ollama
-description: >-
-Learn how to use Ollama in LobeChat, run LLM locally, and experience cutting-edge AI usage.
-
-
+description: 了解如何在 LobeChat 中使用 Ollama ，在你的本地运行大型语言模型，获得最前沿的 AI 使用体验。
 tags:
   - Ollama
   - LobeChat
@@ -52,6 +49,12 @@ launchctl setenv OLLAMA_ORIGINS "*"
 
 接下来，你就可以使用 LobeChat 与本地 LLM 对话了。
 
+  <Image
+    alt="在 LobeChat 中与 llama3 对话"
+    height="400"
+    src="https://github.com/lobehub/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
+  />
+
 </Steps>
 
 ## 在 windows 下使用 Ollama
@@ -77,12 +80,6 @@ launchctl setenv OLLAMA_ORIGINS "*"
 ### 在 LobeChat 中与本地大模型对话
 
 接下来，你就可以使用 LobeChat 与本地 LLM 对话了。
-
-<Image
-  alt="在 LobeChat 中与 llama3 对话"
-  height="400"
-  src="https://github.com/lobehub/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
-/>
 
 </Steps>
 
@@ -200,6 +197,6 @@ ollama pull llama3
 />
 
 <Callout type={'info'}>
-  你可以前往 [与 Ollama 集成](/docs/self-hosting/examples/ollama) 了解如何部署 LobeChat ，以满足与
+  你可以前往 [与 Ollama 集成](/zh/docs/self-hosting/examples/ollama) 了解如何部署 LobeChat ，以满足与
   Ollama 的集成需求。
 </Callout>
