--- a/docs/usage/providers/ollama.mdx
+++ b/docs/usage/providers/ollama.mdx
@@ -25,7 +25,7 @@ This document will guide you on how to use Ollama in LobeChat:
 
 <Video
   alt="demonstration of using Ollama in LobeChat"
-  height="524"
+  height={556}
   src="https://github.com/lobehub/lobe-chat/assets/28616219/c32b56db-c6a1-4876-9bc3-acbd37ec0c0c"
 />
 
@@ -53,7 +53,7 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 <Image
   alt="Chat with llama3 in LobeChat"
-  height="400"
+  height="573"
   src="https://github.com/lobehub/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
 />
 
