✨ feat: Add 404 and Error page

--- a/locales/tr-TR/error.json
+++ b/locales/tr-TR/error.json
@@ -1,4 +1,15 @@
 {
+  "error": {
+    "backHome": "Ana Sayfaya Dön",
+    "desc": "Biraz sonra tekrar deneyin veya bilinen dünyaya geri dönün",
+    "retry": "Yeniden Yükle",
+    "title": "Sayfa bir sorunla karşılaştı.."
+  },
+  "notFound": {
+    "backHome": "Ana Sayfaya Dön",
+    "desc": "Aranan sayfayı bulamıyoruz!",
+    "title": "Bilinmeyen bir alana mı girdiniz?"
+  },
   "pluginSettings": {
     "desc": "Bu eklentiyi kullanmaya başlamak için aşağıdaki yapılandırmayı tamamlayın",
     "title": "{{name}} Eklenti Ayarları"
