:memo: docs: fix list in ZITADEL integration doc

--- a/docs/self-hosting/advanced/sso-providers/zitadel.mdx
+++ b/docs/self-hosting/advanced/sso-providers/zitadel.mdx
@@ -55,8 +55,9 @@ http(s)://your-domain/api/auth/callback/zitadel
 
 <Callout type={'important'}>
   - You can fill in or modify redirect URIs after creating the application, but make sure the filled
-  URL is consistent with the deployed URL. - Replace `http(s)://your-domain` with the actual URL
-  that LobeChat is deployed to.
+  URL is consistent with the deployed URL.
+
+  - Replace `http(s)://your-domain` with the actual URL that LobeChat is deployed to.
 </Callout>
 
 Confirm the configuration and click **Create**.
