⚡ perf: Dynamic import Sentry

--- a/locales/ar/error.json
+++ b/locales/ar/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "العودة إلى الصفحة الرئيسية",
-    "desc": "لم نتمكن من العثور على الصفحة التي تبحث عنها!",
+    "desc": "لم نتمكن من العثور على الصفحة التي تبحث عنها، يرجى التحقق مما إذا كان الرابط صحيحًا",
     "title": "هل دخلت إلى مجال غير معروف؟"
   },
   "pluginSettings": {
