--- a/locales/bg-BG/error.json
+++ b/locales/bg-BG/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "Върни се в началото",
-    "desc": "Не можем да намерим страницата, която търсите!",
+    "desc": "Не можем да намерим страницата, която търсите. Моля, проверете дали връзката е правилна.",
     "title": "Влезли сте в неизвестна територия?"
   },
   "pluginSettings": {
