--- a/locales/ja-JP/error.json
+++ b/locales/ja-JP/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "ホームに戻る",
-    "desc": "お探しのページが見つかりませんでした！",
+    "desc": "お探しのページが見つかりません。リンクが正しいかどうかをご確認ください",
     "title": "未知の領域に入りましたか？"
   },
   "pluginSettings": {
