--- a/locales/pt-BR/error.json
+++ b/locales/pt-BR/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "Voltar para a página inicial",
-    "desc": "Não conseguimos encontrar a página que você está procurando!",
+    "desc": "Não conseguimos encontrar a página que você está procurando, por favor, verifique se o link está correto",
     "title": "Entrou em um território desconhecido?"
   },
   "pluginSettings": {
