--- a/locales/ru-RU/error.json
+++ b/locales/ru-RU/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "Вернуться на главную",
-    "desc": "Мы не можем найти страницу, которую вы ищете!",
+    "desc": "Мы не можем найти страницу, которую вы ищете. Пожалуйста, проверьте правильность ссылки",
     "title": "Заблудились в неизведанных местах?"
   },
   "pluginSettings": {
