--- a/locales/de-DE/error.json
+++ b/locales/de-DE/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "Zurück zur Startseite",
-    "desc": "Die von Ihnen gesuchte Seite konnte nicht gefunden werden!",
+    "desc": "Die von Ihnen gesuchte Seite konnte nicht gefunden werden. Bitte überprüfen Sie, ob der Link korrekt ist.",
     "title": "In unbekanntes Gebiet geraten?"
   },
   "pluginSettings": {
