--- a/locales/es-ES/error.json
+++ b/locales/es-ES/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "Volver a la página de inicio",
-    "desc": "¡No podemos encontrar la página que estás buscando!",
+    "desc": "No podemos encontrar la página que estás buscando, por favor verifica si el enlace es correcto",
     "title": "¿Has entrado en un área desconocida?"
   },
   "pluginSettings": {
