--- a/locales/zh-CN/error.json
+++ b/locales/zh-CN/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "返回首页",
-    "desc": "我们找不到你正在寻找的页面！",
+    "desc": "我们找不到你正在寻找的页面，请检查链接是否正确",
     "title": "进入了未知领域？"
   },
   "pluginSettings": {
