--- a/locales/zh-TW/error.json
+++ b/locales/zh-TW/error.json
@@ -7,7 +7,7 @@
   },
   "notFound": {
     "backHome": "返回首頁",
-    "desc": "我們找不到你正在尋找的頁面！",
+    "desc": "我們找不到您正在尋找的頁面，請檢查連結是否正確",
     "title": "進入了未知領域？"
   },
   "pluginSettings": {
