✨ feat: Add Setting Modal

--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -30,6 +30,7 @@
     "desc": "إعدادات التفضيلات والنماذج.",
     "global": "إعدادات عامة",
     "session": "إعدادات الجلسة",
+    "sessionDesc": "إعداد الشخصية وتفضيلات الجلسة.",
     "sessionWithName": "إعدادات الجلسة · {{name}}",
     "title": "إعدادات"
   },
