--- a/locales/de-DE/setting.json
+++ b/locales/de-DE/setting.json
@@ -30,6 +30,7 @@
     "desc": "Präferenzen und Modellkonfigurationen.",
     "global": "Global Einstellungen",
     "session": "Sitzungseinstellungen",
+    "sessionDesc": "Rollenkonfiguration und Sitzungspräferenzen.",
     "sessionWithName": "Sitzungseinstellungen · {{name}}",
     "title": "Einstellungen"
   },
