--- a/locales/en-US/setting.json
+++ b/locales/en-US/setting.json
@@ -30,6 +30,7 @@
     "desc": "Preferences and model settings.",
     "global": "Global Settings",
     "session": "Session Settings",
+    "sessionDesc": "Role settings and session preferences.",
     "sessionWithName": "Session Settings · {{name}}",
     "title": "Settings"
   },
