--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -30,6 +30,7 @@
     "desc": "Preferencias y configuración del modelo.",
     "global": "Configuración global",
     "session": "Configuración de la sesión",
+    "sessionDesc": "Configuración de roles y preferencias de sesión.",
     "sessionWithName": "Configuración de la sesión · {{name}}",
     "title": "Configuración"
   },
