--- a/locales/nl-NL/setting.json
+++ b/locales/nl-NL/setting.json
@@ -30,6 +30,7 @@
     "desc": "Voorkeuren en modelinstellingen.",
     "global": "Algemene instellingen",
     "session": "Sessie-instellingen",
+    "sessionDesc": "Rolinstellingen en sessievoorkeuren.",
     "sessionWithName": "Sessie-instellingen · {{name}}",
     "title": "Instellingen"
   },
