--- a/locales/pl-PL/setting.json
+++ b/locales/pl-PL/setting.json
@@ -30,6 +30,7 @@
     "desc": "Preferencje i ustawienia modelu.",
     "global": "Ustawienia globalne",
     "session": "Ustawienia sesji",
+    "sessionDesc": "Ustawienia postaci i preferencje sesji.",
     "sessionWithName": "Ustawienia sesji · {{name}}",
     "title": "Ustawienia"
   },
