--- a/locales/vi-VN/setting.json
+++ b/locales/vi-VN/setting.json
@@ -30,6 +30,7 @@
     "desc": "Thiết lập Ưu tiên và Mô hình.",
     "global": "Cài đặt toàn cầu",
     "session": "Cài đặt cuộc trò chuyện",
+    "sessionDesc": "Thiết lập nhân vật và ưu tiên phiên hội thoại.",
     "sessionWithName": "Cài đặt cuộc trò chuyện · {{name}}",
     "title": "Cài đặt"
   },
