--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -30,6 +30,7 @@
     "desc": "Предпочитания и настройки на модела.",
     "global": "Глобални настройки",
     "session": "Настройки на сесията",
+    "sessionDesc": "Задаване на роля и предпочитания за сесия.",
     "sessionWithName": "Настройки на сесията · {{name}}",
     "title": "Настройки"
   },
