--- a/locales/fr-FR/setting.json
+++ b/locales/fr-FR/setting.json
@@ -30,6 +30,7 @@
     "desc": "Préférences et paramètres du modèle.",
     "global": "Paramètres globaux",
     "session": "Paramètres de session",
+    "sessionDesc": "Paramètres de personnage et préférences de session.",
     "sessionWithName": "Paramètres de session · {{name}}",
     "title": "Paramètres"
   },
