--- a/locales/it-IT/setting.json
+++ b/locales/it-IT/setting.json
@@ -30,6 +30,7 @@
     "desc": "Preferenze e impostazioni del modello.",
     "global": "Impostazioni globali",
     "session": "Impostazioni della sessione",
+    "sessionDesc": "Impostazioni del personaggio e preferenze di sessione.",
     "sessionWithName": "Impostazioni della sessione · {{name}}",
     "title": "Impostazioni"
   },
