--- a/locales/ja-JP/setting.json
+++ b/locales/ja-JP/setting.json
@@ -30,6 +30,7 @@
     "desc": "設定優先順位和模型設置。",
     "global": "グローバル設定",
     "session": "セッション設定",
+    "sessionDesc": "キャラクター設定とセッションの好み。",
     "sessionWithName": "セッション設定 · {{name}}",
     "title": "設定"
   },
