--- a/locales/pt-BR/setting.json
+++ b/locales/pt-BR/setting.json
@@ -30,6 +30,7 @@
     "desc": "Preferências e configurações do modelo.",
     "global": "Configurações Globais",
     "session": "Configurações de Sessão",
+    "sessionDesc": "Configurações de personagem e preferências de sessão.",
     "sessionWithName": "Configurações de Sessão · {{name}}",
     "title": "Configurações"
   },
