--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -30,6 +30,7 @@
     "desc": "Настройки предпочтений и моделей.",
     "global": "Глобальные настройки",
     "session": "Настройки сеанса",
+    "sessionDesc": "Настройки персонажа и предпочтения сессии.",
     "sessionWithName": "Настройки сеанса · {{name}}",
     "title": "Настройки"
   },
