💄 style: Update UserInfo

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "إدارة الفواتير",
+    "default": {
+      "nickname": "مستخدم المجتمع",
+      "username": "نسخة معاينة المجتمع"
+    },
     "discord": "الدعم المجتمعي",
     "docs": "وثائق الاستخدام",
     "email": "الدعم عبر البريد الإلكتروني",
