--- a/locales/es-ES/common.json
+++ b/locales/es-ES/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Gestión de facturación",
+    "default": {
+      "nickname": "Usuario de la comunidad",
+      "username": "Vista previa de la comunidad"
+    },
     "discord": "Soporte comunitario",
     "docs": "Documentación de uso",
     "email": "Soporte por correo electrónico",
