--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Fatura Yönetimi",
+    "default": {
+      "nickname": "Topluluk Kullanıcısı",
+      "username": "Topluluk Önizlemesi"
+    },
     "discord": "Topluluk Destek",
     "docs": "Belgeler",
     "email": "E-posta Destek",
