--- a/locales/zh-CN/common.json
+++ b/locales/zh-CN/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "账单管理",
+    "default": {
+      "nickname": "社区用户",
+      "username": "社区预览版"
+    },
     "discord": "社区支持",
     "docs": "使用文档",
     "email": "邮件支持",
