--- a/locales/en-US/common.json
+++ b/locales/en-US/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Billing",
+    "default": {
+      "nickname": "Community User",
+      "username": "Community Preview"
+    },
     "discord": "Community Support",
     "docs": "Documentation",
     "email": "Email Support",
