--- a/locales/pl-PL/common.json
+++ b/locales/pl-PL/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Zarządzanie rachunkiem",
+    "default": {
+      "nickname": "Użytkownik społeczności",
+      "username": "Podgląd społeczności"
+    },
     "discord": "Wsparcie społeczności",
     "docs": "Dokumentacja",
     "email": "Wsparcie mailowe",
