--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Управление счетами",
+    "default": {
+      "nickname": "Пользователь сообщества",
+      "username": "Предварительная версия сообщества"
+    },
     "discord": "Поддержка сообщества",
     "docs": "Документация",
     "email": "Поддержка по электронной почте",
