--- a/locales/vi-VN/common.json
+++ b/locales/vi-VN/common.json
@@ -160,6 +160,10 @@
   },
   "userPanel": {
     "billing": "Quản lý thanh toán",
+    "default": {
+      "nickname": "Người dùng Cộng đồng",
+      "username": "Bản xem trước Cộng đồng"
+    },
     "discord": "Hỗ trợ cộng đồng",
     "docs": "Tài liệu sử dụng",
     "email": "Hỗ trợ qua email",
