--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -140,7 +140,7 @@
   "tab": {
     "chat": "Chat",
     "market": "Keşfet",
-    "me": "我",
+    "me": "ben",
     "setting": "Ayarlar"
   },
   "telemetry": {
