--- a/locales/vi-VN/common.json
+++ b/locales/vi-VN/common.json
@@ -140,7 +140,7 @@
   "tab": {
     "chat": "Trò chuyện",
     "market": "Thị trường",
-    "me": "我",
+    "me": "Tôi",
     "setting": "Cài đặt"
   },
   "telemetry": {
