--- a/locales/fr-FR/common.json
+++ b/locales/fr-FR/common.json
@@ -140,7 +140,7 @@
   "tab": {
     "chat": "Conversation",
     "market": "Découvrir",
-    "me": "我",
+    "me": "moi",
     "setting": "Paramètre"
   },
   "telemetry": {
