--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -27,7 +27,7 @@
     }
   },
   "header": {
-    "desc": "偏好与模型设置。",
+    "desc": "偏好与模型设置",
     "global": "全局设置",
     "session": "会话设置",
     "sessionDesc": "角色设定与会话偏好",
