✨ feat: Add User Panel

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -157,5 +157,22 @@
     "action": "ترقية",
     "hasNew": "يوجد تحديث متاح",
     "newVersion": "هناك إصدار جديد متاح: {{version}}"
+  },
+  "userPanel": {
+    "billing": "إدارة الفواتير",
+    "default": {
+      "nickname": "مستخدم المجتمع",
+      "username": "نسخة معاينة للمجتمع"
+    },
+    "discord": "الدعم المجتمعي",
+    "docs": "وثائق الاستخدام",
+    "email": "الدعم عبر البريد الإلكتروني",
+    "feedback": "تقديم ملاحظات واقتراحات",
+    "help": "مركز المساعدة",
+    "plans": "خطط الاشتراك",
+    "profile": "إدارة الحساب",
+    "setting": "إعدادات التطبيق",
+    "usages": "إحصاءات الاستخدام",
+    "warn": "هذا الدخول سيتم إيقافه قريبًا، يرجى استدعاء هذه القائمة من الزاوية العلوية اليسرى لاحقًا"
   }
 }
