--- a/locales/ru-RU/common.json
+++ b/locales/ru-RU/common.json
@@ -157,5 +157,22 @@
     "action": "обновить",
     "hasNew": "Доступно обновление",
     "newVersion": "Доступна новая версия: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Управление счетами",
+    "default": {
+      "nickname": "Пользователь сообщества",
+      "username": "Предварительный просмотр сообщества"
+    },
+    "discord": "Поддержка сообщества",
+    "docs": "Документация",
+    "email": "Поддержка по электронной почте",
+    "feedback": "Обратная связь и предложения",
+    "help": "Центр помощи",
+    "plans": "Планы подписки",
+    "profile": "Управление аккаунтом",
+    "setting": "Настройки приложения",
+    "usages": "Статистика использования",
+    "warn": "Этот раздел скоро будет закрыт, пожалуйста, в дальнейшем используйте меню, вызываемое изображением в левом верхнем углу"
   }
 }
