--- a/locales/bg-BG/common.json
+++ b/locales/bg-BG/common.json
@@ -157,5 +157,22 @@
     "action": "Надстрой",
     "hasNew": "Налична е нова актуализация",
     "newVersion": "Налична е нова версия: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Управление на сметките",
+    "default": {
+      "nickname": "Потребител на общността",
+      "username": "Преглед на общността"
+    },
+    "discord": "Поддръжка на общността",
+    "docs": "Документация",
+    "email": "Поддръжка по имейл",
+    "feedback": "Обратна връзка и предложения",
+    "help": "Център за помощ",
+    "plans": "Планове за абонамент",
+    "profile": "Управление на профила",
+    "setting": "Настройки на приложението",
+    "usages": "Статистика за използване",
+    "warn": "Този вход скоро ще бъде премахнат, моля използвайте този меню, активирайки иконата в горния ляв ъгъл"
   }
 }
