--- a/locales/de-DE/common.json
+++ b/locales/de-DE/common.json
@@ -157,5 +157,22 @@
     "action": "Aktualisieren",
     "hasNew": "Neue Version verfügbar",
     "newVersion": "Neue Version verfügbar: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Abrechnung verwalten",
+    "default": {
+      "nickname": "Community-Benutzer",
+      "username": "Community-Vorschauversion"
+    },
+    "discord": "Community-Support",
+    "docs": "Dokumentation",
+    "email": "E-Mail-Support",
+    "feedback": "Feedback und Vorschläge",
+    "help": "Hilfezentrum",
+    "plans": "Abonnementpläne",
+    "profile": "Kontoverwaltung",
+    "setting": "App-Einstellungen",
+    "usages": "Nutzungsstatistiken",
+    "warn": "Dieser Zugang wird bald entfernt. Bitte rufen Sie das Menü über das Profilbild oben links auf."
   }
 }
