--- a/locales/es-ES/common.json
+++ b/locales/es-ES/common.json
@@ -157,5 +157,22 @@
     "action": "Actualizar",
     "hasNew": "Hay una nueva actualización disponible",
     "newVersion": "Nueva versión disponible: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Gestión de facturación",
+    "default": {
+      "nickname": "Usuario de la comunidad",
+      "username": "Vista previa de la comunidad"
+    },
+    "discord": "Soporte de la comunidad",
+    "docs": "Documentación de uso",
+    "email": "Soporte por correo electrónico",
+    "feedback": "Comentarios y sugerencias",
+    "help": "Centro de ayuda",
+    "plans": "Planes de suscripción",
+    "profile": "Gestión de cuenta",
+    "setting": "Configuración de la aplicación",
+    "usages": "Estadísticas de uso",
+    "warn": "Esta entrada pronto se eliminará, por favor, acceda a este menú desde la imagen de perfil en la esquina superior izquierda"
   }
 }
