--- a/locales/it-IT/common.json
+++ b/locales/it-IT/common.json
@@ -157,5 +157,22 @@
     "action": "Aggiorna",
     "hasNew": "Nuovo aggiornamento disponibile",
     "newVersion": "Nuova versione disponibile: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Gestione fatturazione",
+    "default": {
+      "nickname": "Utente della community",
+      "username": "Anteprima della community"
+    },
+    "discord": "Supporto della community",
+    "docs": "Documentazione",
+    "email": "Supporto via email",
+    "feedback": "Feedback e suggerimenti",
+    "help": "Centro assistenza",
+    "plans": "Piani di abbonamento",
+    "profile": "Gestione account",
+    "setting": "Impostazioni app",
+    "usages": "Statistiche di utilizzo",
+    "warn": "Questa voce verrà presto rimossa, successivamente accedi a questo menu dall'icona in alto a sinistra"
   }
 }
