--- a/locales/ja-JP/common.json
+++ b/locales/ja-JP/common.json
@@ -157,5 +157,22 @@
     "action": "アップグレード",
     "hasNew": "利用可能な更新があります",
     "newVersion": "新しいバージョンが利用可能です：{{version}}"
+  },
+  "userPanel": {
+    "billing": "請求管理",
+    "default": {
+      "nickname": "コミュニティユーザー",
+      "username": "コミュニティプレビュー版"
+    },
+    "discord": "コミュニティサポート",
+    "docs": "使用文書",
+    "email": "メールサポート",
+    "feedback": "フィードバックと提案",
+    "help": "ヘルプセンター",
+    "plans": "サブスクリプションプラン",
+    "profile": "アカウント管理",
+    "setting": "アプリ設定",
+    "usages": "利用量統計",
+    "warn": "このエントリはまもなく廃止されます。今後は左上隅のアイコンからこのメニューを呼び出してください"
   }
 }
