--- a/locales/pl-PL/common.json
+++ b/locales/pl-PL/common.json
@@ -157,5 +157,22 @@
     "action": "Aktualizuj",
     "hasNew": "Dostępna jest nowa aktualizacja",
     "newVersion": "Dostępna jest nowa wersja: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Zarządzanie rachunkami",
+    "default": {
+      "nickname": "Użytkownik społeczności",
+      "username": "Podgląd społeczności"
+    },
+    "discord": "Wsparcie społeczności",
+    "docs": "Dokumentacja",
+    "email": "Wsparcie mailowe",
+    "feedback": "Opinie i sugestie",
+    "help": "Centrum pomocy",
+    "plans": "Plan abonamentu",
+    "profile": "Zarządzanie kontem",
+    "setting": "Ustawienia aplikacji",
+    "usages": "Statystyki użycia",
+    "warn": "To wejście zostanie wkrótce wyłączone, prosimy o skorzystanie z menu wywoływanego z lewego górnego rogu"
   }
 }
