--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -157,5 +157,22 @@
     "action": "Güncelle",
     "hasNew": "Yeni güncelleme mevcut",
     "newVersion": "Yeni sürüm mevcut: {{version}}"
+  },
+  "userPanel": {
+    "billing": "Fatura Yönetimi",
+    "default": {
+      "nickname": "Topluluk Kullanıcısı",
+      "username": "Topluluk Önizlemesi"
+    },
+    "discord": "Topluluk Destek",
+    "docs": "Belgeler",
+    "email": "E-posta Destek",
+    "feedback": "Geribildirim ve Öneriler",
+    "help": "Yardım Merkezi",
+    "plans": "Planlar",
+    "profile": "Hesap Yönetimi",
+    "setting": "Uygulama Ayarları",
+    "usages": "Kullanım İstatistikleri",
+    "warn": "Bu giriş yakında kaldırılacak, ileride bu menüyü sol üst köşedeki avatarınızdan açabilirsiniz"
   }
 }
