--- a/locales/zh-TW/common.json
+++ b/locales/zh-TW/common.json
@@ -157,5 +157,22 @@
     "action": "升級",
     "hasNew": "有可用更新",
     "newVersion": "有新版本可用：{{version}}"
+  },
+  "userPanel": {
+    "billing": "帳單管理",
+    "default": {
+      "nickname": "社區用戶",
+      "username": "社區預覽版"
+    },
+    "discord": "社區支援",
+    "docs": "使用文件",
+    "email": "郵件支援",
+    "feedback": "反饋與建議",
+    "help": "幫助中心",
+    "plans": "訂閱方案",
+    "profile": "帳戶管理",
+    "setting": "應用設定",
+    "usages": "用量統計",
+    "warn": "此入口即將下線，後續請從左上角頭像喚起本選單"
   }
 }
